FISH-8652: Downgrade string construction.